--- a/src/main/resources/templates/cinema_insert.html
+++ b/src/main/resources/templates/cinema_insert.html
@@ -186,18 +186,18 @@
               </div>
               <!-- /.card-header -->
               <!-- form start -->
-              <form role="form" action="/show">
+              <form role="form" action="/insert">
                 <div class="card-body">
                   <div class="form-group">
                     <div class="row">
-                      <div class="col-12">
+                      <div class="col-6">
                         <div class="form-group">
                           <label>所在省市：</label>
                           <select id="province" class="form-control" name="province">
                           </select>
                         </div>
                       </div>
-                      <div class="col-12 ">
+                      <div class="col-6 ">
                         <div class="form-group">
                           <label>所在区：</label>
                           <select id="city" class="form-control" name="city">
@@ -209,8 +209,29 @@
                         <input type="text" class="form-control" placeholder="例：北京世纪东都国际影城" name="cinemaName">
                       </div>
                       <div class="form-group col-12 float-lg-right">
+                        <label>详细地址：</label>
+                        <input type="text" class="form-control" placeholder="例：平乐园100号" name="address">
+                      </div>
+
+                      <div class="form-group col-6 float-lg-right">
                         <label>影院经理：</label>
                         <input type="text" class="form-control" placeholder="例：张XX" name="responsible">
+                      </div>
+                      <div class="form-group col-6 float-lg-right">
+                        <label>经理电话：</label>
+                        <input type="text" class="form-control" placeholder="例：15000000000" name="responsiblePhone">
+                      </div>
+                      <div class="form-group col-6 float-lg-right">
+                        <label>影院主管：</label>
+                        <input type="text" class="form-control" placeholder="例：李XX" name="manager">
+                      </div>
+                      <div class="form-group col-6 float-lg-right">
+                        <label>主管电话：</label>
+                        <input type="text" class="form-control" placeholder="例：15000000000" name="managerPhone">
+                      </div>
+                      <div class="form-group col-12 float-lg-right">
+                        <label>影厅数量：</label>
+                        <input type="text" class="form-control" placeholder="例：10" name="roomNumber">
                       </div>
                     </div>
                   </div>
@@ -218,9 +239,7 @@
                   <div class="form-group">
 					<div class="card-footer">
                       <div class="row col-sm-2 float-lg-right">
-                        <button type="submit" class="btn btn-primary">查询</button>
-                        <span class="col-sm-2"> &nbsp;&nbsp;</span>
-                        <button type="submit" class="btn btn-primary"><a href="/cinema_insert">添加</a></button>
+                        <button type="submit" class="btn btn-primary">添加</button>
                       </div>
                 	</div>
                   </div>
