--- a/src/main/resources/templates/data_cinema.html
+++ b/src/main/resources/templates/data_cinema.html
@@ -6,7 +6,6 @@
   <title>基础信息管理</title>
   <!-- Tell the browser to be responsive to screen width -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
   <!-- Font Awesome -->
   <link rel="stylesheet" th:href="@{/plugins/font-awesome/css/font-awesome.min.css}">
   <!-- Ionicons -->
@@ -15,6 +14,9 @@
   <link rel="stylesheet" th:href="@{/plugins/datatables/dataTables.bootstrap4.min.css}">
   <!-- Theme style -->
   <link rel="stylesheet" th:href="@{/dist/css/adminlte.min.css}">
+  <script type='text/javascript' th:src='@{/dist/js/jquery-1.11.1.min.js}'></script>
+  <script type='text/javascript' th:src='@{/dist/js/city.js}'></script>
+
   <!-- Google Font: Source Sans Pro -->
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
 </head>
@@ -164,12 +166,12 @@
       <div class="container-fluid">
         <div class="row mb-2">
           <div class="col-sm-6">
-            <h1>影院分类检索</h1>
+            <h1>影院分类管理</h1>
           </div>
           <div class="col-sm-6">
             <ol class="breadcrumb float-sm-right">
               <li class="breadcrumb-item"><a href="#">主页</a></li>
-              <li class="breadcrumb-item active">影院分类检索</li>
+              <li class="breadcrumb-item active">影院分类管理</li>
             </ol>
           </div>
         </div>
@@ -182,31 +184,63 @@
         <div class="col-12">
 		<div class="card card-primary">
               <div class="card-header">
-                <h3 class="card-title">添加影院信息</h3>
+                <h3 class="card-title">影院信息</h3>
               </div>
               <!-- /.card-header -->
               <!-- form start -->
               <form role="form">
                 <div class="card-body">
-                  <div class="form-group">
-                    <label>影院名称</label>
-                    <input type="text" class="form-control" placeholder="例：北京世纪东都国际影城">
+                  <div class="row">
+                    <div class="col-3 float-lg-left">
+                      <div class="form-group">
+                        <label>所在省市：</label>
+                        <select id="province" class="form-control" name="province">
+                        </select>
+                      </div>
+                    </div>
+                    <div class="col-3 float-lg-right">
+                      <div class="form-group">
+                        <label>所在区：</label>
+                        <select id="city" class="form-control" name="city">
+                        </select>
+                      </div>
+                    </div>
+                    <div class="form-group col-3 float-lg-left">
+                      <label>影院名称：</label>
+                      <input type="text" class="form-control" placeholder="例：北京世纪东都国际影城" name="cinemaName">
+                    </div>
+                    <div class="form-group col-3 float-lg-right">
+                      <label>影院经理：</label>
+                      <input type="text" class="form-control" placeholder="例：张XX" name="responsible">
+                    </div>
                   </div>
-                  <div class="form-group">
-                    <label>影院地址</label>
-                    <input type="text" class="form-control" placeholder="例：北京市朝阳区西大望路100号">
+
+<!--                  <div class="row col-sm-12">-->
+<!--                    <div class="form-group col-sm-3">-->
+<!--                      <label>影院名称</label>-->
+<!--                      <input type="text" class="form-control" placeholder="例：北京世纪东都国际影城">-->
+<!--                    </div>-->
+<!--                    <div class="form-group col-sm-3">-->
+<!--                      <label>影院地址</label>-->
+<!--                      <input type="text" class="form-control" placeholder="例：北京市朝阳区西大望路100号">-->
+<!--                    </div>-->
+<!--                    <div class="form-group col-sm-3">-->
+<!--                      <label>影院经理</label>-->
+<!--                      <input type="text" class="form-control" placeholder="例：张XX">-->
+<!--                    </div>-->
+<!--                    <div class="form-group col-sm-3">-->
+<!--                      <label>联系电话</label>-->
+<!--                      <input type="text" class="form-control"placeholder="例：1500000000">-->
+<!--                    </div>-->
+<!--                  &lt;!&ndash; /.card-body &ndash;&gt;-->
+<!--                  </div>-->
+                  <div class="card-footer">
+                    <div class="row col-sm-2 float-lg-right">
+                    <button type="submit" class="btn btn-primary">查询</button>
+                    <span class="col-sm-2"> &nbsp;&nbsp;</span>
+                    <button type="submit" class="btn btn-primary">添加</button>
                   </div>
-				  <div class="form-group">
-                    <label>影院经理</label>
-                    <input type="text" class="form-control" placeholder="例：张XX">
-                  </div>
-				  <div class="form-group">
-                    <label>联系电话</label>
-                    <input type="text" class="form-control"placeholder="例：1500000000">
-                  </div>                                  
-                <!-- /.card-body -->
-                <div class="card-footer">
-                  <button style="float: right" type="submit" class="btn btn-primary">提交</button>
+                </div>
                 </div>
               </form>
             </div>
@@ -234,7 +268,7 @@
                   <td>平乐园100号</td>
                   <td>张三</td>
                   <td>1300000000</td>
-				  <th><a href="../examples/details.html">详情</a></th>
+				  <th><a href="/details">详情</a></th>
                 </tr>
                 <tr>
                   <td>劲松电影院</td>
@@ -242,7 +276,7 @@
                   <td>劲松街道78号</td>
                   <td>宋XX</td>
                   <td>1570000000</td>
-				  <th><a href="../examples/details.html">详情</a></th>
+				  <th><a href="/details">详情</a></th>
                 </tr>
                 <tr>
                   <td>大地影院</td>
@@ -250,7 +284,7 @@
 				  <td>西大望路123号</td>
                   <td>李XX</td>
                   <td>1600000000</td>
-				  <th><a href="../examples/details.html">详情</a></th>
+				  <th><a href="/details">详情</a></th>
                 </tr>
                 <tr>
                   <td>保利影城</td>
@@ -258,7 +292,7 @@
                   <td>廊房头条15号</td>
                   <td>赵X</td>
                   <td>1900000000</td>
-				  <th><a href="../examples/details.html">详情</a></th>
+				  <th><a href="/details">详情</a></th>
                 </tr>
                 <tr>
                   <td>北京世纪东都国际影城</td>
@@ -266,7 +300,7 @@
                   <td>东四环中路195号</td>
                   <td>秦X</td>
                   <td>1570000000</td>
-				  <th><a href="../examples/details.html">详情</a></th>
+				  <th><a href="/details">详情</a></th>
                 </tr>
                 <tr>
                   <td>万达影城</td>
@@ -274,7 +308,7 @@
                   <td>东二环中路 65号</td>
                   <td>赵XX</td>
                   <td>1870000000</td>
-				  <th><a href="../examples/details.html">详情</a></th>
+				  <th><a href="/details">详情</a></th>
                 </tr>
                 </tbody>
                 <tfoot>
@@ -289,7 +323,7 @@
             <div class="card-header">
               <h3 class="card-title">Hover Data Table</h3>
             </div>
-            <!-- /.card-header -->
+             /.card-header -->
             <!--<div class="card-body">
               <table id="example2" class="table table-bordered table-hover">
                 <thead>
@@ -769,6 +803,25 @@
       "autoWidth": false
     });
   });
+</script>
+<script>
+  (function(){
+    var pHtmlStr = '';
+    for(var name in pc){
+      pHtmlStr = pHtmlStr + '<option>'+name+'</option>';
+    }
+    $("#province").html(pHtmlStr);
+    $("#province").change(function(){
+      var pname = $("#province option:selected").text();
+      var pHtmlStr = '';
+      var cityList = pc[pname];
+      for(var index in cityList){
+        pHtmlStr = pHtmlStr + '<option>'+cityList[index]+'</option>';
+      }
+      $("#city").html(pHtmlStr);
+    });
+    $("#province").change();
+  })();
 </script>
 </body>
 </html>
