--- a/src/main/resources/templates/data_machine.html
+++ b/src/main/resources/templates/data_machine.html
@@ -163,12 +163,12 @@
       <div class="container-fluid">
         <div class="row mb-2">
           <div class="col-sm-6">
-            <h1>放映机检索</h1>
+            <h1>放映机管理</h1>
           </div>
           <div class="col-sm-6">
             <ol class="breadcrumb float-sm-right">
               <li class="breadcrumb-item"><a href="#">主页</a></li>
-              <li class="breadcrumb-item active">放映机分类信息表</li>
+              <li class="breadcrumb-item active">放映机管理</li>
             </ol>
           </div>
         </div>
@@ -181,31 +181,65 @@
         <div class="col-12">
 		<div class="card card-primary">
               <div class="card-header">
-                <h3 class="card-title">添加放映机信息</h3>
+                <h3 class="card-title">放映机信息</h3>
               </div>
               <!-- /.card-header -->
               <!-- form start -->
               <form role="form">
                 <div class="card-body">
-                  <div class="form-group">
-                    <label for="exampleInputEmail1">放映机品牌</label>
-                    <input type="text" class="form-control" id="exampleInputEmail1" placeholder="例：巴可数字放映机">
+                  <div class="row col-sm-12">
+                    <div class="form-group col-sm-3">
+                      <label>放映机品牌</label>
+                      <div class="form-group">
+                        <!--<label>Select</label>-->
+                        <select class="form-control">
+                          <option>巴可数字放映机</option>
+                          <option>巴可数字放映机</option>
+                          <option>巴可数字放映机</option>
+                          <option>巴可数字放映机</option>
+                        </select>
+                      </div>
+                    </div>
+                    <div class="form-group col-sm-3">
+                      <label>使用光源类型</label>
+                      <div class="form-group">
+                        <!--<label>Select</label>-->
+                        <select class="form-control">
+                          <option>RGB 6P（六基色）</option>
+                          <option>氙气放映机</option>
+                          <option>汞灯放映机</option>
+                          <option>激光+荧光放映机</option>
+                        </select>
+                      </div>
+                    </div>
+                    <div class="form-group col-sm-3">
+                      <label>放映机子系列</label>
+                      <div class="form-group">
+                        <!--<label>Select</label>-->
+                        <select class="form-control">
+                          <option>CLP 系列</option>
+                          <option>BLP 系列</option>
+                          <option>SLP 系列</option>
+                          <option>B 系列</option>
+                          <option>C 系列</option>
+                          <option>L 系列</option>
+                          <option>LHC 系列</option>
+                          <option>其他 系列</option>
+                        </select>
+                      </div>
+                    </div>
+                    <div class="form-group col-sm-3">
+                      <label for="exampleInputPassword1">放映机具体型号</label>
+                      <input type="text" class="form-control" id="exampleInputPassword1" placeholder="例：DP2K-8SLP">
+                    </div>
                   </div>
-                  <div class="form-group">
-                    <label for="exampleInputPassword1">使用光源类型</label>
-                    <input type="text" class="form-control" id="exampleInputPassword1" placeholder="例：激光+荧光粉放映机">
-                  </div>
-				  <div class="form-group">
-                    <label for="exampleInputPassword1">放映机子系列</label>
-                    <input type="text" class="form-control" id="exampleInputPassword1" placeholder="例：SLP 系列">
-                  </div>
-				  <div class="form-group">
-                    <label for="exampleInputPassword1">放映机具体型号</label>
-                    <input type="text" class="form-control" id="exampleInputPassword1" placeholder="例：DP2K-8SLP">
-                  </div>                                  
                 <!-- /.card-body -->
                 <div class="card-footer">
-                  <button style="float: right" type="submit" class="btn btn-primary">提交</button>
+                  <div class="row col-sm-2 float-lg-right">
+                    <button type="submit" class="btn btn-primary">查询</button>
+                    <span class="col-sm-2"> &nbsp;&nbsp;</span>
+                    <button type="submit" class="btn btn-primary">添加</button>
+                  </div>                </div>
                 </div>
               </form>
             </div>
