--- a/src/main/resources/templates/error_search.html
+++ b/src/main/resources/templates/error_search.html
@@ -191,19 +191,19 @@
               <form role="form">
                 <div class="card-body">
                   <div class="form-group">
-                    <label for="exampleInputEmail1">设备品牌：</label>
-                    <input type="text" class="form-control" id="exampleInputEmail1" placeholder="例：巴可">
+                    <label>设备品牌：</label>
+                    <input type="text" class="form-control" placeholder="例：巴可">
                   </div>
 				  <div class="form-group">
-                    <label for="exampleInputEmail1">设备型号：</label>
-                    <input type="text" class="form-control" id="exampleInputEmail1" placeholder="例：DP2K">
+                    <label>设备型号：</label>
+                    <input type="text" class="form-control" placeholder="例：DP2K">
                   </div>
 				  <div class="form-group">
-                    <label for="exampleInputEmail1">设备故障码：</label>
-                    <input type="text" class="form-control" id="exampleInputEmail1" placeholder="例：5003">
+                    <label>设备故障码：</label>
+                    <input type="text" class="form-control" placeholder="例：5003">
                   </div>
                   <div class="form-group">
-						<label for="exampleInputPassword1">标准类型</label>
+						<label>标准类型</label>
 						<div class="form-group">
 						<!--<label>Select</label>-->
 							<select class="form-control">
