--- a/src/main/resources/templates/base/equipment/search.html
+++ b/src/main/resources/templates/base/equipment/search.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>影院信息检索</title>
+  <title>设备基础信息管理</title>
   <!-- Tell the browser to be responsive to screen width -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Font Awesome -->
@@ -143,125 +143,104 @@
     </ul>
   </nav>
   <!-- /.navbar -->
-
   <!-- Main Sidebar Container -->
-	<aside class="main-sidebar sidebar-dark-primary elevation-4">
-		<!-- Brand Logo -->
-		<div th:replace="model/left :: left-logo"></div>
-		<!-- Sidebar -->
-		<div class="sidebar">
-			<!-- Sidebar user panel (optional) -->
-			<div th:replace="model/left :: left-nav-client"></div>
-			<!-- Sidebar Menu -->
-			<div th:replace="model/left :: left-nav"></div>
-			<!-- /.sidebar-menu -->
-		</div>
-		<!-- /.sidebar -->
-	</aside>
-	<!-- Content Wrapper. Contains page content -->
+  <aside class="main-sidebar sidebar-dark-primary elevation-4">
+      <!-- Brand Logo -->
+      <div th:replace="model/left :: left-logo"></div>
+      <!-- Sidebar -->
+      <div class="sidebar">
+          <!-- Sidebar user panel (optional) -->
+          <div th:replace="model/left :: left-nav-client"></div>
+          <!-- Sidebar Menu -->
+          <div th:replace="model/left :: left-nav"></div>
+          <!-- /.sidebar-menu -->
+      </div>
+      <!-- /.sidebar -->
+  </aside>
+  <!-- Content Wrapper. Contains page content -->
   <div class="content-wrapper">
-    <!-- Content Header (Page header) -->
-    <section class="content-header">
-      <div class="container-fluid">
-        <div class="row mb-2">
-          <div class="col-sm-6">
-            <h1>影院信息检索</h1>
-          </div>
-          <div class="col-sm-6">
-            <ol class="breadcrumb float-sm-right">
-              <li class="breadcrumb-item"><a href="#">主页</a></li>
-              <li class="breadcrumb-item active">影院信息检索</li>
-            </ol>
-          </div>
+  <!-- Content Header (Page header) -->
+  <section class="content-header">
+    <div class="container-fluid">
+      <div class="row mb-2">
+        <div class="col-sm-6">
+          <h1>设备基础信息管理</h1>
         </div>
-      </div><!-- /.container-fluid -->
-    </section>
-    <!-- Main content -->
-    <section class="content">
-      <div class="row">
-        <div class="col-12">
-		<div class="card card-primary">
-              <div class="card-header">
-                <h3 class="card-title">请输入影院检索信息</h3>
-              </div>
-              <!-- /.card-header -->
-              <!-- form start -->
-              <form role="form" action="/insert">
-                <div class="card-body">
-                  <div class="form-group">
-                    <div class="row">
-                      <div class="col-6">
-                        <div class="form-group">
-                          <label>所在省市：</label>
-                          <select id="province" class="form-control" name="province">
-                          </select>
-                        </div>
-                      </div>
-                      <div class="col-6 ">
-                        <div class="form-group">
-                          <label>所在区：</label>
-                          <select id="city" class="form-control" name="city">
-                          </select>
-                        </div>
-                      </div>
-                      <div class="form-group col-12 float-lg-left">
-                        <label>影院名称：</label>
-                        <input type="text" class="form-control" placeholder="例：北京世纪东都国际影城" name="cinemaName">
-                      </div>
-                      <div class="form-group col-12 float-lg-right">
-                        <label>详细地址：</label>
-                        <input type="text" class="form-control" placeholder="例：平乐园100号" name="address">
-                      </div>
-
-                      <div class="form-group col-6 float-lg-right">
-                        <label>影院经理：</label>
-                        <input type="text" class="form-control" placeholder="例：张XX" name="responsible">
-                      </div>
-                      <div class="form-group col-6 float-lg-right">
-                        <label>经理电话：</label>
-                        <input type="text" class="form-control" placeholder="例：15000000000" name="responsiblePhone">
-                      </div>
-                      <div class="form-group col-6 float-lg-right">
-                        <label>影院主管：</label>
-                        <input type="text" class="form-control" placeholder="例：李XX" name="manager">
-                      </div>
-                      <div class="form-group col-6 float-lg-right">
-                        <label>主管电话：</label>
-                        <input type="text" class="form-control" placeholder="例：15000000000" name="managerPhone">
-                      </div>
-                      <div class="form-group col-12 float-lg-right">
-                        <label>影厅数量：</label>
-                        <input type="text" class="form-control" placeholder="例：10" name="roomNumber">
+        <div class="col-sm-6">
+          <ol class="breadcrumb float-sm-right">
+            <li class="breadcrumb-item"><a href="#">主页</a></li>
+            <li class="breadcrumb-item active">设备基础信息管理</li>
+          </ol>
+        </div>
+      </div>
+    </div><!-- /.container-fluid -->
+  </section>
+  <!-- Main content -->
+  <section class="content">
+    <div class="row">
+      <div class="col-12">
+      <div class="card card-primary">
+            <div class="card-header">
+              <h3 class="card-title">请输入设备检索信息</h3>
+            </div>
+            <!-- /.card-header -->
+            <!-- form start -->
+            <form role="form" action="/cinema/show">
+              <div class="card-body">
+                <div class="form-group">
+                  <div class="row">
+                    <div class="col-3 float-lg-left">
+                      <div class="form-group">
+                        <label>所在省市：</label>
+                        <select id="province" class="form-control" name="province">
+                        </select>
                       </div>
                     </div>
-                  </div>
-					<!-- /.card-body -->
-                  <div class="form-group">
-					<div class="card-footer">
-                      <div class="row col-sm-2 float-lg-right">
-                        <button type="submit" class="btn btn-primary">添加</button>
+                    <div class="col-3 float-lg-right">
+                      <div class="form-group">
+                        <label>所在区：</label>
+                        <select id="city" class="form-control" name="city">
+                        </select>
                       </div>
-                	</div>
+                    </div>
+                    <div class="form-group col-3 float-lg-left">
+                      <label>影院名称：</label>
+                      <input type="text" class="form-control" placeholder="例：北京世纪东都国际影城" name="cinemaName">
+                    </div>
+                    <div class="form-group col-3 float-lg-right">
+                      <label>影院经理：</label>
+                      <input type="text" class="form-control" placeholder="例：张XX" name="responsible">
+                    </div>
                   </div>
-				</div>
-              </form>
-		    </div>
-          <!-- /.card -->
-        </div>
-          <!-- /.card -->
-        </div>
-        <!-- /.col -->
-    </section>
+                </div>
+                  <!-- /.card-body -->
+                <div class="form-group">
+                  <div class="card-footer">
+                    <div class="row col-sm-2 float-lg-right">
+                      <button type="submit" class="btn btn-primary">查询</button>
+                      <span class="col-sm-2"> &nbsp;&nbsp;</span>
+                      <a href="/cinema/insert" style="color: #ffffff;">
+                        <button type="button" class="btn btn-primary">添加</button>
+                      </a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </form>
+      </div>
+        <!-- /.card -->
+      </div>
+      <!-- /.col -->
+    </div>
+  </section>
+  <!-- /.content -->
   </div>
-      <!-- /.row -->
-    <!-- /.content -->
-  </div>
-  <!-- /.content-wrapper -->
-	<div th:replace="/model/footer :: footer-and-right"></div>
+<!-- /.content-wrapper -->
+  <div th:replace="/model/footer :: footer-and-right"></div>
   <!-- Control Sidebar -->
-  <aside class="control-sidebar control-sidebar-dark">
-    <!-- Control sidebar content goes here -->
-  </aside>
+<!--  <aside class="control-sidebar control-sidebar-dark">-->
+<!--    &lt;!&ndash; Control sidebar content goes here &ndash;&gt;-->
+<!--  </aside>-->
   <!-- /.control-sidebar -->
 </div>
 <!-- ./wrapper -->
