--- a/src/main/resources/templates/system/user.html
+++ b/src/main/resources/templates/system/user.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>基础信息管理</title>
+    <title>用户管理</title>
     <!-- Tell the browser to be responsive to screen width -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Font Awesome -->
@@ -14,8 +14,6 @@
     <link rel="stylesheet" th:href="@{/plugins/datatables/dataTables.bootstrap4.min.css}">
     <!-- Theme style -->
     <link rel="stylesheet" th:href="@{/dist/css/adminlte.min.css}">
-    <script type='text/javascript' th:src='@{/dist/js/jquery-1.11.1.min.js}'></script>
-    <script type='text/javascript' th:src='@{/dist/js/city.js}'></script>
 
     <!-- Google Font: Source Sans Pro -->
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
@@ -30,7 +28,7 @@
                 <a class="nav-link" data-widget="pushmenu" href="#"><i class="fa fa-bars"></i></a>
             </li>
             <li class="nav-item d-none d-sm-inline-block">
-                <a href="../../index.html" class="nav-link">主页</a>
+                <a href="/index" class="nav-link">主页</a>
             </li>
             <li class="nav-item d-none d-sm-inline-block">
                 <a href="#" class="nav-link"></a>
@@ -166,12 +164,12 @@
             <div class="container-fluid">
                 <div class="row mb-2">
                     <div class="col-sm-6">
-                        <h1>影院分类管理</h1>
+                        <h1>标准基础信息管理</h1>
                     </div>
                     <div class="col-sm-6">
                         <ol class="breadcrumb float-sm-right">
                             <li class="breadcrumb-item"><a href="#">主页</a></li>
-                            <li class="breadcrumb-item active">影院分类管理</li>
+                            <li class="breadcrumb-item active">标准基础信息管理</li>
                         </ol>
                     </div>
                 </div>
@@ -183,7 +181,7 @@
                 <div class="col-12">
                     <div class="card card-primary">
                         <div class="card-header">
-                            <h3 class="card-title">影院信息</h3>
+                            <h3 class="card-title">请输入标准检索信息</h3>
                         </div>
                         <!-- /.card-header -->
                         <!-- form start -->
@@ -213,66 +211,41 @@
                                         <input type="text" class="form-control" placeholder="例：张XX" name="responsible">
                                     </div>
                                 </div>
-
-                                <!--                  <div class="row col-sm-12">-->
-                                <!--                    <div class="form-group col-sm-3">-->
-                                <!--                      <label>影院名称</label>-->
-                                <!--                      <input type="text" class="form-control" placeholder="例：北京世纪东都国际影城">-->
-                                <!--                    </div>-->
-                                <!--                    <div class="form-group col-sm-3">-->
-                                <!--                      <label>影院地址</label>-->
-                                <!--                      <input type="text" class="form-control" placeholder="例：北京市朝阳区西大望路100号">-->
-                                <!--                    </div>-->
-                                <!--                    <div class="form-group col-sm-3">-->
-                                <!--                      <label>影院经理</label>-->
-                                <!--                      <input type="text" class="form-control" placeholder="例：张XX">-->
-                                <!--                    </div>-->
-                                <!--                    <div class="form-group col-sm-3">-->
-                                <!--                      <label>联系电话</label>-->
-                                <!--                      <input type="text" class="form-control"placeholder="例：1500000000">-->
-                                <!--                    </div>-->
-                                <!--                  &lt;!&ndash; /.card-body &ndash;&gt;-->
-                                <!--                  </div>-->
                                 <div class="card-footer">
                                     <div class="row col-sm-2 float-lg-right">
                                         <button type="submit" class="btn btn-primary">查询</button>
                                         <span class="col-sm-2"> &nbsp;&nbsp;</span>
-                                        <button type="submit" class="btn btn-primary">添加</button>
+                                        <a href="/cinema/insert" style="color: #ffffff;">
+                                            <button type="button" class="btn btn-primary">添加</button>
+                                        </a>
                                     </div>
                                 </div>
                             </div>
                         </form>
                     </div>
-                    <div class="card">
+                    <div class="card card-primary">
                         <div class="card-header">
-                            <h3 class="card-title">分类检索结果</h3>
+                            <h3 class="card-title">基础信息检索结果</h3>
                         </div>
                         <!-- /.card-header -->
                         <div class="card-body">
-                            <table id="example1" class="table table-bordered table-striped">
+                            <table class="table table-bordered table-striped">
                                 <thead>
                                 <tr>
-                                    <th>影院名称</th>
-                                    <th>省市区</th>
-                                    <th>地址</th>
-                                    <th>影院经理</th>
-                                    <th>经理电话</th>
-                                    <th>影院主管</th>
-                                    <th>主管电话</th>
-                                    <th>影厅数量</th>
-                                    <th>详情</th>
+                                    <th>用户名</th>
+                                    <th>性别</th>
+                                    <th>生日</th>
+                                    <th>QQ</th>
+                                    <th>个人介绍</th>
                                 </tr>
                                 </thead>
                                 <tbody>
-                                <tr th:each="cinema : ${cinemas}">
-                                    <td th:text="${cinema.cinemaName}">北京XXX影城</td>
-                                    <td th:text="${cinema.province + cinema.city}">北京市 朝阳区</td>
-                                    <td th:text="${cinema.address}">平乐园100号</td>
-                                    <td th:text="${cinema.responsible}">张三</td>
-                                    <td th:text="${cinema.responsiblePhone}">140000</td>
-                                    <td th:text="${cinema.manager}">ac</td>
-                                    <td th:text="${cinema.managerPhone}">dfjlsd</td>
-                                    <td th:text="${cinema.roomNumber}">1300000000</td>
+                                <tr th:each="student : ${studentInfos}">
+                                    <td th:text="${student.username}"></td>
+                                    <td th:text="${cinema.sex}"></td>
+                                    <td th:text="${cinema.birthday}"></td>
+                                    <td th:text="${cinema.qq}"></td>
+                                    <td th:text="${cinema.myself}"></td>
                                     <th><a href="/details">详情</a></th>
                                 </tr>
                                 </tbody>
@@ -315,37 +288,5 @@
 <!-- AdminLTE for demo purposes -->
 <script th:src="@{/static/dist/js/demo.js}"></script>
 <!-- page script -->
-<script>
-    $(function () {
-        $("#example1").DataTable();
-        $('#example2').DataTable({
-            "paging": true,
-            "lengthChange": false,
-            "searching": false,
-            "ordering": true,
-            "info": true,
-            "autoWidth": false
-        });
-    });
-</script>
-<script>
-    (function(){
-        var pHtmlStr = '';
-        for(var name in pc){
-            pHtmlStr = pHtmlStr + '<option>'+name+'</option>';
-        }
-        $("#province").html(pHtmlStr);
-        $("#province").change(function(){
-            var pname = $("#province option:selected").text();
-            var pHtmlStr = '';
-            var cityList = pc[pname];
-            for(var index in cityList){
-                pHtmlStr = pHtmlStr + '<option>'+cityList[index]+'</option>';
-            }
-            $("#city").html(pHtmlStr);
-        });
-        $("#province").change();
-    })();
-</script>
 </body>
 </html>
