add standard function

--- a/src/main/resources/templates/base/cinema/search.html
+++ b/src/main/resources/templates/base/cinema/search.html
@@ -185,7 +185,7 @@
             </div>
             <!-- /.card-header -->
             <!-- form start -->
-            <form role="form" action="/cinema/show">
+            <form role="form" action="/base/cinema/show">
               <div class="card-body">
                 <div class="form-group">
                   <div class="row">
@@ -219,7 +219,7 @@
                     <div class="row col-sm-2 float-lg-right">
                       <button type="submit" class="btn btn-primary">查询</button>
                       <span class="col-sm-2"> &nbsp;&nbsp;</span>
-                      <a href="/cinema/insert" style="color: #ffffff;">
+                      <a href="/base/cinema/insert" style="color: #ffffff;">
                         <button type="button" class="btn btn-primary">添加</button>
                       </a>
                     </div>
