--- a/src/main/resources/templates/base/cinema/insert.html
+++ b/src/main/resources/templates/base/cinema/insert.html
@@ -186,7 +186,7 @@
               </div>
               <!-- /.card-header -->
               <!-- form start -->
-              <form role="form" action="/cinema/insert">
+              <form role="form" action="/base/cinema/insert">
                 <div class="card-body">
                   <div class="form-group">
                     <div class="row">
