--- a/src/main/resources/templates/base/equipment/search.html
+++ b/src/main/resources/templates/base/equipment/search.html
@@ -219,7 +219,7 @@
                     <div class="row col-sm-2 float-lg-right">
                       <button type="submit" class="btn btn-primary">查询</button>
                       <span class="col-sm-2"> &nbsp;&nbsp;</span>
-                      <a href="/cinema/insert" style="color: #ffffff;">
+                      <a href="/base/cinema/insert" style="color: #ffffff;">
                         <button type="button" class="btn btn-primary">添加</button>
                       </a>
                     </div>
