--- a/src/main/resources/templates/base/standard/show.html
+++ b/src/main/resources/templates/base/standard/show.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>影院基础信息管理</title>
+    <title>标准基础信息管理</title>
     <!-- Tell the browser to be responsive to screen width -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Font Awesome -->
@@ -166,12 +166,12 @@
             <div class="container-fluid">
                 <div class="row mb-2">
                     <div class="col-sm-6">
-                        <h1>影院基础信息管理</h1>
+                        <h1>标准基础信息管理</h1>
                     </div>
                     <div class="col-sm-6">
                         <ol class="breadcrumb float-sm-right">
                             <li class="breadcrumb-item"><a href="#">主页</a></li>
-                            <li class="breadcrumb-item active">影院基础信息管理</li>
+                            <li class="breadcrumb-item active">标准基础信息管理</li>
                         </ol>
                     </div>
                 </div>
@@ -183,7 +183,7 @@
                 <div class="col-12">
                     <div class="card card-primary">
                         <div class="card-header">
-                            <h3 class="card-title">请输入影院检索信息</h3>
+                            <h3 class="card-title">请输入标准检索信息</h3>
                         </div>
                         <!-- /.card-header -->
                         <!-- form start -->
