--- a/src/main/resources/templates/data_search.html
+++ b/src/main/resources/templates/data_search.html
@@ -187,26 +187,38 @@
               <form role="form">
                 <div class="card-body">
                   <div class="form-group row">
-                    <div class="col-6">
-                      <label>标准文件名称/标准编号：</label>
-                      <input type="text" class="form-control" id="exampleInputEmail1" placeholder="例：电影院星级的划分与评定/GY/T 248-2011">
-                    </div>
-                    <div class="col-6">
+                    <div class="col-4">
                       <label>标准类型</label>
                       <div class="form-group">
                         <!--<label>Select</label>-->
                         <select class="form-control">
-                          <option>国家标准</option>
+                          <option>国际标准</option>
+                          <option>国内标准</option>
                           <option>行业标准</option>
                           <option>团体标准</option>
                           <option>企业标准</option>
                         </select>
                       </div>
                     </div>
+                    <div class="col-4">
+                      <label>标准对象</label>
+                      <div class="form-group">
+                        <!--<label>Select</label>-->
+                        <select class="form-control">
+                          <option>放映机标准</option>
+                          <option>影院标准</option>
+                          <option>影厅标准</option>
+                        </select>
+                      </div>
+                    </div>
+                    <div class="col-4">
+                      <label>标准文件名称/标准编号：</label>
+                      <input type="text" class="form-control" id="exampleInputEmail1" placeholder="例：电影院星级的划分与评定/GY/T 248-2011">
+                    </div>
                   </div>
                 <!-- /.card-body -->
                   <div class="card-footer">
-                    <button style="float: right" type="submit" class="btn btn-primary">提交</button>
+                    <button style="float: right" type="submit" class="btn btn-primary">查询</button>
                   </div>
                 </div>
               </form>
@@ -216,7 +228,7 @@
             <div class="card-header">
               <h3 class="card-title">Hover Data Table</h3>
             </div>
-            <!-- /.card-header -->
+             /.card-header -->
             <!--<div class="card-body">
               <table id="example2" class="table table-bordered table-hover">
                 <thead>
