--- a/src/main/resources/templates/model/left.html
+++ b/src/main/resources/templates/model/left.html
@@ -6,10 +6,11 @@
         <span class="brand-text font-weight-light"><h5>影院放映质量信息服务系统</h5></span>
     </a>
 </div>
+
 <div th:fragment="left-nav-client" >
     <div class="user-panel mt-3 pb-3 mb-3 d-flex">
         <div class="image">
-            <img th:src="@{dist/img/user2-160x160.jpg}" class="img-circle elevation-2" alt="User Image">
+            <img th:src="@{/images/admin.png}" class="img-circle elevation-2" alt="User Image">
         </div>
         <div class="info">
             <a href="#" class="d-block"><h4 th:text="${session.username}"></h4></a>
@@ -32,38 +33,9 @@
             </a>
             <ul class="nav nav-treeview">
                 <li class="nav-item">
-                    <a href="/blank_api" class="nav-link">
+                    <a href="/system/user" class="nav-link">
                         <i class="fa fa-plug nav-icon"></i>
-                        <p>接口管理</p>
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link">
-                        <i class="fa fa-file-text-o nav-icon"></i>
-                        <p>日志管理</p>
-                    </a>
-                </li>
-            </ul>
-        </li>
-        <li class="nav-item">
-            <a href="#" class="nav-link">
-                <i class="nav-icon fa fa-user-circle"></i>
-                <p>
-                    用户管理
-                    <i class="right fa fa-angle-left"></i>
-                </p>
-            </a>
-            <ul class="nav nav-treeview">
-                <li class="nav-item">
-                    <a href="/index" class="nav-link">
-                        <i class="fa fa-users nav-icon"></i>
-                        <p>组织管理</p>
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a href="/index" class="nav-link">
-                        <i class="fa fa-male nav-icon"></i>
-                        <p>角色管理</p>
+                        <p>用户管理</p>
                     </a>
                 </li>
                 <li class="nav-item">
@@ -73,56 +45,51 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="/index" class="nav-link">
-                        <i class="fa fa-user nav-icon"></i>
-                        <p>用户管理</p>
+                    <a href="#" class="nav-link">
+                        <i class="fa fa-file-text-o nav-icon"></i>
+                        <p>个人信息管理</p>
                     </a>
                 </li>
+                <li class="nav-item">
+                    <a href="/blank_api" class="nav-link">
+                        <i class="fa fa-plug nav-icon"></i>
+                        <p>数据接口管理</p>
+                    </a>
+                </li>
+
             </ul>
         </li>
         <li class="nav-item">
             <a href="#" class="nav-link">
                 <i class="nav-icon fa fa-th"></i>
                 <p>
-                    基础信息管理
+                    基础信息配置
                     <i class="right fa fa-angle-left"></i>
                 </p>
             </a>
             <ul class="nav nav-treeview">
                 <li class="nav-item">
-                    <a href="/data_cinema" class="nav-link">
+                    <a href="/base/cinema/search" class="nav-link">
                         <i class="fa fa-file-text-o nav-icon"></i>
-                        <p>机构信息管理</p>
+                        <p>影院基础信息管理</p>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a href="/data_cinema" class="nav-link">
                         <i class="fa fa-file-text-o nav-icon"></i>
-                        <p>院线公司信息管理</p>
+                        <p>设备基础信息管理</p>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a href="/data_cinema" class="nav-link">
                         <i class="fa fa-file-text-o nav-icon"></i>
-                        <p>管理公司信息管理</p>
+                        <p>配件基础信息管理</p>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="/data_cinema" class="nav-link">
+                    <a href="/base/standard/search" class="nav-link">
                         <i class="fa fa-file-text-o nav-icon"></i>
-                        <p>影院信息管理</p>
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a href="/data_machine" class="nav-link">
-                        <i class="fa fa-file-text-o nav-icon"></i>
-                        <p>厂家信息管理</p>
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a href="/data_machine" class="nav-link">
-                        <i class="fa fa-file-text-o nav-icon"></i>
-                        <p>服务公司信息管理</p>
+                        <p>标准基础信息管理</p>
                     </a>
                 </li>
             </ul>
@@ -144,41 +111,39 @@
                 </li>
             </ul>
         </li>
-        <li class="nav-item">
-            <a href="#" class="nav-link">
-                <i class="nav-icon fa fa-wrench"></i>
-                <p>
-                    故障与维修管理
-                    <i class="right fa fa-angle-left"></i>
-                </p>
-            </a>
-            <ul class="nav nav-treeview">
-                <li class="nav-item">
-                    <a href="/chartjs_statistic" class="nav-link">
-                        <i class="fa fa-thumb-tack nav-icon"></i>
-                        <p>日常维护任务</p>
-                    </a>
-                </li>
-            </ul>
-        </li>
+<!--        <li class="nav-item">-->
+<!--            <a href="#" class="nav-link">-->
+<!--                <i class="nav-icon fa fa-wrench"></i>-->
+<!--                <p>-->
+<!--                    故障与维修管理-->
+<!--                    <i class="right fa fa-angle-left"></i>-->
+<!--                </p>-->
+<!--            </a>-->
+<!--            <ul class="nav nav-treeview">-->
+<!--                <li class="nav-item">-->
+<!--                    <a href="/chartjs_statistic" class="nav-link">-->
+<!--                        <i class="fa fa-thumb-tack nav-icon"></i>-->
+<!--                        <p>日常维护任务</p>-->
+<!--                    </a>-->
+<!--                </li>-->
+<!--            </ul>-->
+<!--        </li>-->
         <li class="nav-item has-treeview">
             <a href="#" class="nav-link">
                 <i class="nav-icon fa fa-calendar"></i>
                 <p>
-                    日常工作管理
+                    计划任务
                     <!--<span class="badge badge-info right">2</span>-->
-                    <i class="right fa fa-angle-left"></i>
+                    <i class="fa fa-angle-left right"></i>
                 </p>
             </a>
             <ul class="nav nav-treeview">
                 <li class="nav-item">
                     <a href="/calendar_manage" class="nav-link">
-                        <i class="fa fa-thumb-tack nav-icon"></i>
+                        <i class="fa fa-calendar nav-icon"></i>
                         <p>日常任务总览</p>
                     </a>
                 </li>
-            </ul>
-            <ul class="nav nav-treeview">
                 <li class="nav-item">
                     <a href="/task_search" class="nav-link">
                         <i class="fa fa-thumb-tack nav-icon"></i>
@@ -191,7 +156,7 @@
             <a href="#" class="nav-link">
                 <i class="nav-icon fa fa-search"></i>
                 <p>
-                    信息查询
+                    资料库
                     <i class="fa fa-angle-left right"></i>
                 </p>
             </a>
@@ -199,51 +164,21 @@
                 <li class="nav-item">
                     <a href="/data_search" class="nav-link">
                         <i class="fa fa-search nav-icon"></i>
-                        <p>标准查询</p>
+                        <p>相关标准</p>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a href="/cinema_search" class="nav-link">
                         <i class="fa fa-search nav-icon"></i>
-                        <p>故障代码查询</p>
+                        <p>维护教程</p>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a href="#" class="nav-link">
                         <i class="fa fa-search nav-icon"></i>
-                        <p>常见故障查询</p>
+                        <p>故障手册</p>
                     </a>
                 </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link">
-                        <i class="fa fa-search nav-icon"></i>
-                        <p>设备信息查询</p>
-                    </a>
-                </li>
-<!--                <li class="nav-item">-->
-<!--                    <a href="/error_search" class="nav-link">-->
-<!--                        <i class="fa fa-search nav-icon"></i>-->
-<!--                        <p>故障信息检索</p>-->
-<!--                    </a>-->
-<!--                </li>-->
-<!--                <li class="nav-item">-->
-<!--                    <a href="#" class="nav-link">-->
-<!--                        <i class="fa fa-search nav-icon"></i>-->
-<!--                        <p>厂家信息检索</p>-->
-<!--                    </a>-->
-<!--                </li>-->
-<!--                <li class="nav-item">-->
-<!--                    <a href="#" class="nav-link">-->
-<!--                        <i class="fa fa-search nav-icon"></i>-->
-<!--                        <p>服务商信息检索</p>-->
-<!--                    </a>-->
-<!--                </li>-->
-<!--                <li class="nav-item">-->
-<!--                    <a href="#" class="nav-link">-->
-<!--                        <i class="fa fa-search nav-icon"></i>-->
-<!--                        <p>综合信息检索</p>-->
-<!--                    </a>-->
-<!--                </li>-->
             </ul>
         </li>
         <li class="nav-item has-treeview">
@@ -255,35 +190,6 @@
                 </p>
             </a>
         </li>
-        <li class="nav-item has-treeview">
-            <a href="#" class="nav-link">
-                <i class="nav-icon fa fa-pie-chart"></i>
-                <p>
-                    业务统计分析
-                    <i class="right fa fa-angle-left"></i>
-                </p>
-            </a>
-            <ul class="nav nav-treeview">
-                <li class="nav-item">
-                    <a href="/flot_analysis" class="nav-link">
-                        <i class="fa fa-plug nav-icon"></i>
-                        <p>API接口数据统计</p>
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a href="/flot_analysis" class="nav-link">
-                        <i class="fa fa-times-circle-o nav-icon"></i>
-                        <p>故障统计</p>
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a href="/chartjs_statistic" class="nav-link">
-                        <i class="fa fa-thumb-tack nav-icon"></i>
-                        <p>日常维护任务统计</p>
-                    </a>
-                </li>
-            </ul>
-        </li>
         <li class="nav-item">
             <a href="/direction_chat" class="nav-link">
                 <i class="nav-icon fa fa-table"></i>
@@ -293,11 +199,40 @@
                 </p>
             </a>
         </li>
+        <li class="nav-item">
+            <a href="#" class="nav-link">
+                <i class="nav-icon fa fa-pie-chart"></i>
+                <p>
+                    业务统计分析
+                    <i class="right fa fa-angle-left"></i>
+                </p>
+            </a>
+<!--            <ul class="nav nav-treeview">-->
+<!--                <li class="nav-item">-->
+<!--                    <a href="/flot_analysis" class="nav-link">-->
+<!--                        <i class="fa fa-plug nav-icon"></i>-->
+<!--                        <p>API接口数据统计</p>-->
+<!--                    </a>-->
+<!--                </li>-->
+<!--                <li class="nav-item">-->
+<!--                    <a href="/flot_analysis" class="nav-link">-->
+<!--                        <i class="fa fa-times-circle-o nav-icon"></i>-->
+<!--                        <p>故障统计</p>-->
+<!--                    </a>-->
+<!--                </li>-->
+<!--                <li class="nav-item">-->
+<!--                    <a href="/chartjs_statistic" class="nav-link">-->
+<!--                        <i class="fa fa-thumb-tack nav-icon"></i>-->
+<!--                        <p>日常维护任务统计</p>-->
+<!--                    </a>-->
+<!--                </li>-->
+<!--            </ul>-->
+        </li>
         <li class="nav-item has-treeview">
             <a href="#" class="nav-link">
                 <i class="nav-icon fa fa-book"></i>
                 <p>
-                    答题管理
+                    答题系统
                     <i class="fa fa-angle-left right"></i>
                 </p>
             </a>
@@ -311,31 +246,7 @@
                 <li class="nav-item">
                     <a href="#" class="nav-link">
                         <i class="fa fa-search nav-icon"></i>
-                        <p>答题查询</p>
-                    </a>
-                </li>
-            </ul>
-        </li>
-        <li class="nav-item">
-            <a href="#" class="nav-link">
-                <i class="nav-icon fa fa-pencil"></i>
-                <p>
-                    积分管理
-                    <!--<span class="right badge badge-danger">New</span>-->
-                    <i class="fa fa-angle-left right"></i>
-                </p>
-            </a>
-            <ul class="nav nav-treeview">
-                <li class="nav-item">
-                    <a href="#" class="nav-link">
-                        <i class="fa fa-edit nav-icon"></i>
                         <p>积分管理</p>
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link">
-                        <i class="fa fa-search nav-icon"></i>
-                        <p>积分查询</p>
                     </a>
                 </li>
             </ul>
@@ -344,8 +255,7 @@
             <a href="#" class="nav-link">
                 <i class="nav-icon fa fa-table"></i>
                 <p>
-                    课程学习
-                    <!--<i class="fa fa-angle-left right"></i>-->
+                    在线课程
                 </p>
             </a>
         </li>
