modified details pages

--- a/src/main/resources/templates/documents/operate_details.html
+++ b/src/main/resources/templates/documents/operate_details.html
@@ -207,63 +207,66 @@
                 <!-- /.col -->
                 <div class="col-sm-4 invoice-col">
                   <address>
-					<strong>故障代码及说明：</strong>
-                    <br>Code 5004: “lamp - no communication” (Error)<br>
+					<strong>支持的设备型号：</strong>
+                    <br>DP2K SLP LLP<br>
                   </address>
                 </div>
 				<div class="col-sm-4 invoice-col">
                   <address>
-					<strong>故障级别：</strong>
-                    <br>错误<br>
+					<strong>建议维护周期：</strong>
+                    <br>6个月<br>
                   </address>
                 </div>
                 <!-- /.col -->
               </div>
               <!-- /.row -->
+
            <address></address>
               <!-- Table row -->
               <div class="row">
 				  <div class="col-6 table-responsive">
 					  <div >
-						  <h4>&nbsp&nbsp&nbsp解决方法：</h4>
+						  <h4>&nbsp;</h4>
 					  </div>
                   	<table class="table table-striped">
                     <thead>
                     <tr>
-                      <th>状态</th>
+                      <th>操作步骤</th>
                       <th>解决方法</th>
                     </tr>
                     </thead>
                     <tbody>
                     <tr>
-                      <td>灯箱没有被正确安装</td>
+                      <td>步骤一</td>
                       <td>检查灯箱安装，并重置灯箱</td>
-
                     </tr>
                     <tr>
-                      <td>使用了与本机型号不匹配的灯箱</td>
+                      <td>步骤二</td>
                       <td>选择匹配灯箱</td>
-
                     </tr>
                     <tr>
-                      <td>同时显示代码5180（lamp house - not connected）</td>
+                      <td>步骤三</td>
                       <td>见5180</td>
-
                     </tr>
                     <tr>
-                      <td>与灯箱无通讯</td>
+                      <td>步骤四</td>
                       <td>检查灯箱前端蓝色插头是否损坏</td>
-
                     </tr>
                     </tbody>
                   </table>
 				  </div>
 				  <div class="col-6 table-responsive">
-					<h4>&nbsp&nbsp&nbsp操作视频：<button style="float: right" type="button" class="btn btn-info">答题</button> </h4>
-						&nbsp&nbsp&nbsp视频加载中...
-				  </div>
+					<h4>&nbsp&nbsp&nbsp操作视频</h4>
+                    <video style="height: 340px; width: 617px;" autoplay="autoplay" controls="controls" th:src="@{/video/abc.mov}">
+                      <span>&nbsp;</span>
+                    </video>
+                    <div class="col-11">
+                    <button style="float: right" type="submit" class="btn btn-info">答题</button>
+                    </div>
+                  </div>
                 <!-- /.col -->
               </div>
+                <!-- /.card-body -->
               <!-- /.row -->
               <!-- Table row -->
               </div>
