--- a/src/main/resources/templates/documents/hand_details.html
+++ b/src/main/resources/templates/documents/hand_details.html
@@ -161,12 +161,12 @@
       <div class="container-fluid">
         <div class="row mb-2">
           <div class="col-sm-6">
-            <h1>标准详细信息</h1>
+            <h1>故障详细信息</h1>
           </div>
           <div class="col-sm-6">
             <ol class="breadcrumb float-sm-right">
               <li class="breadcrumb-item"><a href="#">主页</a></li>
-              <li class="breadcrumb-item active">标准详细信息</li>
+              <li class="breadcrumb-item active">故障详细信息</li>
             </ol>
           </div>
         </div>
@@ -187,10 +187,11 @@
               <div class="row">
                 <div class="col-12">
                   <h4>
-                    
+                    <small class="float-left">XX 设备故障手册 </small>
                     <small class="float-right">更新时间: 2/8/2019</small>
                   </h4>
                 </div>
+                <div class="form-group col-12">&nbsp;</div>
                 <!-- /.col -->
               </div>
               <!-- info row -->
@@ -258,7 +259,12 @@
                   </table>
 				  </div>
 				  <div class="col-6 table-responsive">
-					<h4>&nbsp&nbsp&nbsp操作视频：</h4>
+					<h4>
+                      &nbsp&nbsp&nbsp操作视频：
+                      <a href="#">
+                        <button style="float: right" type="button" class="btn btn-info">答题</button>
+                      </a>
+                    </h4>
 						&nbsp&nbsp&nbsp视频加载中...
 				  </div>
                 <!-- /.col -->
